--- a/references.bib
+++ b/references.bib
@@ -748,4 +748,17 @@
 	volume = {139},
 	year = {2011}
 }
+@misc{Horton2019c,
+	author = {Horton, Pascal},
+	doi = {10.5281/zenodo.3339236},
+	publisher = {Zenodo},
+	title = {{AtmoSwing v2.1.1}},
+	year = {2019}
+}
+@misc{Horton2018d,
+	author = {Horton, Pascal and Burkart, Kathrin},
+	doi = {10.5281/zenodo.1305098},
+	title = {{AtmoSwing R tools}},
+	year = {2018}
+}
 
