Reference in a figure's caption to another figure does not work here...

--- a/main.tex
+++ b/main.tex
@@ -240,7 +240,7 @@ ERA5 was selected as the best reanalysis from a minimum of 34.9\% of the station
 \begin{figure}[bt]
     \centering
     \includegraphics[width=\textwidth]{figures/boxplot-per-method-diff.pdf}
-    \caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and per method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. \ref{fig:comparison_values}.}
+    \caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and per method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. 2.}
     \label{fig:comparison_relative}
 \end{figure}
 
@@ -253,7 +253,7 @@ Although the calibrations have been made on a HPC cluster, they ended up to be h
 \begin{figure}[bt]
 	\centering
 	\includegraphics[width=80mm]{figures/boxplot-resol-diff.pdf}
-	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as the failed calibration of AMs with ERA5. The impact of the reanalysis on performance has been isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets (excluding the failed calibration), per station and per method. Same conventions as Fig. \ref{fig:comparison_relative}.}
+	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as the failed calibration of AMs with ERA5. The impact of the reanalysis on performance has been isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets (excluding the failed calibration), per station and per method. Same conventions as Fig. 2.}
 	\label{fig:resolution}
 \end{figure}
 
